Fix spacing in sliders

--- a/node-graph/node.css
+++ b/node-graph/node.css
@@ -83,3 +83,24 @@ ellipse.individual {
     background-color: rgba(94, 94, 94, 0.96);
     color: white;
 }
+
+/* Legend */
+.legend span {
+    display: inline-block; 
+}
+
+.legend span.twodigit {
+    width: 18px;
+}
+
+.legend span.threedigit {
+    width: 25px;
+}
+
+.legend span.spacer {
+    width: 30px;
+}
+
+.legend input.slider {
+    width: 15%;
+}
